@@ -303,8 +303,21 @@ GEOS Support:
 - GEOS support is optional, and is not included by default.
   MapServer requires GEOS version 2.2.3 or more recent.
 
-- The GEOS library can be found at http://geos.refractions.net/
+- The GEOS library can be found at http://trac.osgeo.org/geos/
 
+
+XMP Support:
+------------
+
+::
+
+  --with-exempi=PATH
+
+- XMP support is optional, and is not incuded by default.
+
+- XMP support allows metadata (title, attribute, license, etc) to be directly embedded in the images generated by MapServer.
+
+- The exempi library can be found at http://libopenraw.freedesktop.org/wiki/Exempi
 
 
 OGR Support:
